<resources>
    <string name="app_name">SoyActivista</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Cerrar Sesion</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="completar_registro">Completar Registro</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="recuperar_contrasena">Olvidé mi contraseña</string>
    <string name="recuperar_cuenta">Olvidé mi cuenta</string>
    <string name="ingresar">Ingresar</string>
    <string name="regresar">Regresar</string>
    <string name="publicar">Publicar</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="comprobar_passw">Introducir Contraseña</string>
    <string name="repita_pass">Repita su nueva contraseña</string>
    <string name="editar_cuenta">Editar</string>
    <string name="eliminar_cuenta">Eliminar</string>
    <string name="guardar_datos">Guardar</string>
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminarMensaje">Eliminar</string>
    <string name="nueva_partida">Nueva Partida</string>
    <string name="estadisticas">Mis Estadísticas</string>
    <string name="administrar_preguntas">Administrar Preguntas</string>
    <string name="carga_completa">Carga Completa, Boton deshabilitado</string>
    <string name="volverMenuPrincipal">Volver al menu principal</string>
    <string name="dificultadFacil">Fácil</string>
    <string name="dificultadIntermedio">Intermedio</string>
    <string name="dificultadDificil">Difícil</string>
    <string name="nombrePartido">NOMBRE PARTIDO</string>
    <string name="login">Login</string>
    <string name="mapaTitulo"><b>Seleccione un punto en el mapa</b></string>
    <string name="autor">Identificador</string>
    <string name="clave">Password</string>
    <string name="token">Token de Registro</string>
    <string name="codigo">Código de Identificación</string>
    <string name="agregarUsuario">Agregar Usuario</string>
    <string name="mensajesDir">Mensajes directos</string>
    <string name="mensajeReport">Mensajes reportados</string>
    <string name="boletinMensajes">Boletin de mensajes</string>
    <string name="listarUsuario">Listar Usuario</string>
    <string name="boletinActividades">Boletin de actividades</string>
    <string name="agregarActividades">Actividades del partido</string>
    <string name="tablaPuntuaciones">Tabla de Puntuaciones</string>
    <string name="trivia">Trivia de Formación</string>
    <string name="editarPartido">Editar partido político</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="crearActividad">Crear Actividad</string>
    <string name="elimarCuenta">Eliminar Cuenta</string>
    <string name="manejarActividades">Actividades del partido</string>
    <string name="MensajesDarwin">Darwin</string>
    <string name="username">Identificador</string>
    <string name="usernameEjemplo">aB12G81n</string>
    <string name="nombre">Nombre</string>
    <string name="nombreEjemplo">Juan</string>
    <string name="apellido">Apellido</string>
    <string name="apellidoEjemplo">Morales</string>
    <string name="correo">Correo electrónico</string>
    <string name="correoEjemplo">abc@dominio.com</string>
    <string name="cargo">Cargo</string>
    <string name="cargoejemplo">Un Cargo</string>
    <string name="estadoSuscripcion">Estado de Suscripción</string>
    <string name="municipioSuscripcion">Municipio de Suscripción</string>
    <string name="comitePertenencia">Comité de Pertenencia</string>
    <string name="guardar">Guardar</string>
    <string name="buscador">Buscar</string>
    <string name="hintBuscador">Identificador o nombre</string>
    <string name="rol_spinner_label">Rol</string>
    <string name="prueba">Prueba</string>
    <string name="finPartida">¡Fin de la partida!</string>
    <string name="textPuntosConseguidos">Has conseguido:</string>
    <string name="puntosConseguidos">#</string>
    <string name="textCorrectas">Respuestas Correctas:</string>
    <string name="respuestasCorrectas">#</string>
    <string name="textIncorrectas">Respuestas Incorrectas:</string>
    <string name="respuestasIncorrectas">#</string>
    <string name="elegirDificultad">Elige el nivel de dificultad de la partida</string>
    <string name="logroTrivia">Actualmente eres un activista:</string>
    <string name="tipoActivista">VETERANO</string>
    <string name="suscripcion">En tu estado de suscripción eres el número:</string>
    <string name="puntosAcumulados">Has acumulado hasta el momento:</string>
    <string name="rankingUsuarios">#</string>
    <string name="puntosTotales"># puntos</string>
    <string name="textPartidasTotal">Has jugado hasta el momento</string>
    <string name="partidasTotales"># partidas</string>
    <string name="desempeñoPreguntas">Te desempeñas mejor en preguntas de nivel:</string>
    <string name="dificultadEjemplo">Intermedio</string>
    <string name="actividad">Actividad</string>
    <string name="hintActividad">Nombre de la actividad</string>
    <string name="puntaje">Puntaje</string>
    <string name="hintPuntaje">100,200,300...900</string>
    <string name="descripcion">Descripción de la actividad</string>
    <string name="hintDescripcion">Describa las acciones</string>
    <string name="objetivo">Objetivo</string>
    <string name="hintObjetivo">Describa el objetivo a lograr</string>
    <string name="ubicacion">Ubicación</string>
    <string name="parroquia">Parroquia</string>
    <string name="hintParroquia">Nombre de la Parroquia</string>
    <string name="encargado">Encargado</string>
    <string name="hintEncargado">Nombre del Responsable</string>
    <string name="creador">Creador</string>
    <string name="estatus">Estatus</string>
    <string name="inicio">Fecha de Inicio</string>
    <string name="inicioCorto">Inicio:</string>
    <string name="hintInicio">dd/MM/yyyy</string>
    <string name="fin">Fecha de Finalización</string>
    <string name="finCorto">Fin:</string>
    <string name="hintFin">dd/MM/yyyy</string>
    <string name="estado">Estado</string>
    <string name="municipio">Municipio</string>
    <string name="eliminar">Eliminar</string>
    <string name="labelNombrePartido">Nombre del Partido Político:</string>
    <string name="hintNombrePartido">Nombre partido político</string>
    <string name="labelColorPartido">Color del Partido Político:</string>
    <string name="guardarCambios">Guardar Cambios</string>
    <string name="fotosAdjuntadas">/4</string>
    <string name="totalFotosInit">0</string>
    <string name="adjuntarImagenes">Adjuntar Imágenes:</string>
    <string name="mensajePrueba">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare et mauris ut lacinia. Mauris at urna at nibh volutpat.</string>
    <string name="reportar">Reportar</string>
    <string name="comite">Comité</string>
    <string name="comiteEjemplo">Nacional</string>
    <string name="cargoEjemplo">Director de Salud</string>
    <string name="tipoUsuario">Tipo de Usuario</string>
    <string name="tipoUsuarioEjemplo">Activista</string>
    <string name="totalChars">0/200</string>
    <string name="totalCharsObjective">0/500</string>
    <string name="registrar">Registrar</string>
    <string name="tempPassword">D2xBwRhV</string>
    <string name="estadoEjemplo">Monagas</string>
    <string name="municipioEjemplo">El Hatillo</string>
    <string name="rolEjemplo">Activista</string>
    <string name="editar">Editar</string>
    <string name="filtroEstados">Filtrar por estado</string>
    <string name="filtroComite">Filtrar por comite</string>
    <string name="filtroRol">Filtrar por rol</string>
    <string name="enviar">Enviar</string>
    <string name="emailLargo">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetirContraseña">Repetir Contraseña</string>
    <string name="filtroPropios">Mis Mensajes</string>
    <string name="filtroReportados">Filtrar reportados</string>
    <string name="filtroEstatus">Filtrar por estatus</string>
    <string name="filtroNacionales">Filtrar nacionales</string>
    <string name="filtroEstadales">Filtrar estadales</string>
    <string name="filtroMeGusta">Filtrar cantidad de meGusta</string>
    <string name="filtroTodas">Mostrar todas</string>
    <string name="filtroActividadesPropias">Mis Actividades</string>
    <string name="eliminarConversacion">Eliminar conversación</string>
    <string name="guardarConversacion">Guardar conversación</string>
    <string name="likesEjemplo">100</string>
    <string name="filtroTodos">Mostrar todos</string>
    <string name="cantidadImagenesEjemplo">4 / 4</string>
    <string name="registrarse">Registrarse</string>
    <string name="ultimaVezActiva">Última vez activa</string>
    <string name="fechaEjemplo">10/06/2015</string>
    <string name="parroquiaSuscripcion">Parroquia de Suscripción</string>
    <string name="parroquiaEjemplo">San José</string>
    <string name="noExistenElementos">No existe ningún elemento.</string>
    <string name="filtroPuntaje">Filtrar por Puntaje</string>
    <string name="filtroNivel">Filtrar por Nivel</string>
    <string name="puntosSuspensivos">...</string>
    <string name="puntosEjemplo">15698</string>
    <string name="partidasEjemplo">123</string>
    <string name="partidasJugadas">Has jugado hasta el momento:</string>
    <string name="tiempoExtra">Más Tiempo</string>
    <string name="saltarPregunta">Saltar Pregunta</string>
    <string name="pregunta">Pregunta</string>
    <string name="opcion1">Opción 1</string>
    <string name="opcion2">Opción 2</string>
    <string name="opcion3">Opción 3</string>
    <string name="opcion4">Opción 4</string>
    <string name="nivel">Nivel</string>
    <string name="tiempoParaResponder">Tiempo para responder</string>
    <string name="tiempoEjemplo">90 segundos</string>
    <string name="opcionCorrecta">Opción correcta</string>
    <string name="preguntaEjemplo">¿ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pellentesque.?</string>
    <string name="Upload">Upload</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    <string name="top_5_national_help">En pantalla podrás ver los 5 estados del país con las mejores puntuaciones por activismo. El cálculo de las puntuaciones se realiza al sumar todos los puntajes de los usuarios adscritos a cada estado.</string>
    <string name="top_5_state_help">En pantalla podrás ver los 5 municipios del estado con las mejores puntuaciones por activismo. El cálculo de las puntuaciones se realiza al sumar todos los puntajes de los usuarios adscritos a cada municipio del estado.</string>
    <string name="cargado_el_dia">Cargado el día:</string>
    <string name="titulo_documento">Título del Documento:</string>
    <string name="descripcion_documento">Descripción del Documento:</string>
    <string name="archivo_a_cargar">Archivo a cargar:</string>
    <string name="seleccionar_archivo">Seleccionar archivo</string>
    <string name="cargar">Cargar</string>
</resources>