<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuDashBoard"
            android:icon="@drawable/ic_pizarra_mensajes"
            android:title="@string/boletinMensajes"/>
        <item
            android:id="@+id/menuMensajeDirecto"
            android:icon="@drawable/ic_mensajes_directos"
            android:title="@string/mensajesDir"/>

        <item
            android:id="@+id/menuBoletinActividades"
            android:icon="@drawable/ic_boletin_proyectos"
            android:title="@string/boletinActividades"/>

        <item
            android:id="@+id/menuManejarActividades"
            android:icon="@drawable/ic_edicion_proyectos"
            android:title="@string/manejarActividades"/>

        <item
            android:id="@+id/menuTrivia"
            android:icon="@drawable/ic_trivia_formacion"
            android:title="@string/trivia"/>

        <item
            android:id="@+id/menuTablaPuntos"
            android:icon="@drawable/ic_tabla_puntuaciones"
            android:title="@string/tablaPuntuaciones"/>

        <item
            android:id="@+id/menuListarUsuario"
            android:icon="@drawable/ic_edicion_usuarios"
            android:title="@string/listarUsuario"/>

        <item
            android:id="@+id/menuAgregarUsuario"
            android:icon="@drawable/ic_agregar_usuario"
            android:title="@string/agregarUsuario"/>
        <item
            android:id="@+id/menuEditarPartido"
            android:icon="@drawable/ic_edicion_partido"
            android:title="@string/editarPartido"/>

        <item
            android:id="@+id/menuMiPerfil"
            android:icon="@drawable/ic_perfil_usuario"
            android:title="@string/miPerfil"/>
        <item
            android:id="@+id/menuCerrarSesion"
            android:icon="@drawable/ic_highlight_off_white_24dp"
            android:title="@string/cerrarSesion"/>
    </group>
</menu>