<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/username"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/editUsername"
                android:hint="@string/usernameEjemplo"
                android:enabled="false"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/nombre"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:singleLine="true"

                android:hint="@string/nombreEjemplo"
                android:id="@+id/editNombre"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/apellido"/>

            <EditText
                android:layout_width="fill_parent"
                android:hint="@string/apellidoEjemplo"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:singleLine="true"
                android:id="@+id/editApellido"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/correo"/>

            <EditText
                android:layout_width="fill_parent"
                android:hint="@string/correoEjemplo"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/editEmail"
                android:enabled="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/cargo"/>

            <EditText
                android:layout_width="fill_parent"
                android:hint="@string/cargoEjemplo"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/editCargo"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/estadoSuscripcion"/>

            <TextView
                android:id="@+id/valueEstado"
                android:text="@string/estadoEjemplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinEstado"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/municipioSuscripcion"/>

            <TextView
                android:id="@+id/valueMunicipio"
                android:text="@string/municipioEjemplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinMunicipio"
                android:visibility="gone"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/comitePertenencia"/>

            <TextView
                android:id="@+id/valueComite"
                android:text="@string/comiteEjemplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinComite"
                android:visibility="gone"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/rol_spinner_label"/>

            <TextView
                android:id="@+id/valueRol"
                android:text="@string/rolEjemplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinRol"
                android:visibility="gone"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonEditar"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/buttonGuardar"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/buttonEliminar"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eliminar"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal" />




            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>