<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/actividad"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editActividad"
            android:singleLine="true"
            android:hint="@string/hintActividad"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/puntaje"
            android:id="@+id/TextPuntaje"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinPuntaje"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/descripcion"/>

        <EditText
            android:layout_width="fill_parent"
            android:hint="@string/hintDescripcion"
            android:layout_height="wrap_content"
            android:id="@+id/editDescripcion"
            android:enabled="false"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="@string/editar_cuenta"
                android:id="@+id/btnEditarTipoActividad"
                android:textColor="@color/white" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/btnGuardarTipoActividad"
                android:layout_height="wrap_content"
                android:text="@string/guardar_datos"
                android:textColor="@color/white"
                android:visibility="gone"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/buttonCancelar"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:visibility="gone"
                />


            <Button
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/btnEliminarTipoActividad"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_cuenta"
                android:textColor="@color/white"/>




        </LinearLayout>

    </LinearLayout>
</FrameLayout>